# vsweep

./: README.md  pyproject.toml
vsweep/: __init__.py  adaptive.py  base.py  vector.py
