[project]
name = "vsweep"
description = "An elegant way to perform sweeps."
version = "0.1.0"
authors = [
  { name = "Vianney Rousset" }
]
dependencies = [
  "numpy",
  "adaptive"
]

[project.optional-dependencies]
dev = [
    "black",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
